--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -20,7 +20,7 @@ Hier könnt ihr euch einfach eine SVG Datei für euren Stamm erstellen lassen, w
 
 <form class="form-horizontal" action="{{ LINK_MAIN }}getSVG" method="POST" role="form">
 	<div class="form-group">
-		<input type="text" placeholder="Gib hier deinen Stamm oder eine PLZ ein" name="group" class="form-control input-lg text-center" name="group_name" />
+		<input type="text" placeholder="Gib hier deinen Stamm oder eine PLZ ein" class="form-control input-lg text-center" name="group_name" />
 		<input type="hidden" value="" name="group_id" />
 	</div>
 	<div class="form-group">
